# smile_id_rust

./: Cargo.toml  README.md
.github/workflows/: codeql.yml  release.yml
src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  models.rs  utils.rs
src/products/: basic_kyc.rs  biometric_kyc.rs  business_verification.rs  document_verification.rs  enhanced_kyc.rs  mod.rs  smartselfie_auth.rs
